Fix: Arreglado reverse para java 17